fixing a text-align problem in the footer in the video page

--- a/css/style-video.css
+++ b/css/style-video.css
@@ -43,3 +43,7 @@
 .align-right {
   text-align: right !important;
 }
+
+footer {
+  text-align: left;
+}
